Add tags with class

--- a/Logout Page/index.html
+++ b/Logout Page/index.html
@@ -20,6 +20,11 @@
             <input type="submit" value="Submit" id="guess-btn">
 
             <p class="message"></p>
+            <p class="timepass"></p>
+            <p class="tftt"></p>
+            <p class="word"></p>
+            <p class="milton"></p>
+
         </div>
 
     </div>
